hoang anh fix loi tich atribute